--- a/KODE/Controllers/DetailRecipeController/DetailRecipeController.xib
+++ b/KODE/Controllers/DetailRecipeController/DetailRecipeController.xib
@@ -43,13 +43,13 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zoe-UG-f8W">
-                                    <rect key="frame" x="16" y="326" width="288" height="22.5"/>
-                                    <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="17"/>
+                                    <rect key="frame" x="16" y="326" width="288" height="20.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lhe-Ce-K3l">
-                                    <rect key="frame" x="16" y="385.5" width="288" height="166.5"/>
+                                    <rect key="frame" x="16" y="366.5" width="288" height="185.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сложность:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRV-pv-EhU">
                                             <rect key="frame" x="96.5" y="20" width="95" height="22.5"/>
@@ -120,7 +120,7 @@
                                 <constraint firstItem="wO3-ve-ANl" firstAttribute="bottom" secondItem="aT3-P2-7wu" secondAttribute="bottom" id="a0F-lX-FE3"/>
                                 <constraint firstItem="aT3-P2-7wu" firstAttribute="top" secondItem="fTa-FT-weF" secondAttribute="top" id="aYj-T5-UAD"/>
                                 <constraint firstAttribute="trailing" secondItem="Lhe-Ce-K3l" secondAttribute="trailing" constant="16" id="uVy-mW-ShS"/>
-                                <constraint firstItem="Lhe-Ce-K3l" firstAttribute="top" secondItem="Zoe-UG-f8W" secondAttribute="bottom" constant="37" id="vR3-8c-Jfl"/>
+                                <constraint firstItem="Lhe-Ce-K3l" firstAttribute="top" secondItem="Zoe-UG-f8W" secondAttribute="bottom" constant="20" id="vR3-8c-Jfl"/>
                             </constraints>
                         </view>
                     </subviews>
